@@ -41,15 +41,6 @@
 #include "login/login.h"
 #include "ntlm/x-ntlm.h"
 
-/**
- * GSASL_VALID_MECHANISM_CHARACTERS:
- *
- * A zero-terminated character array, or string, with all ASCII
- * characters that may be used within a SASL mechanism name.
- **/
-const char *GSASL_VALID_MECHANISM_CHARACTERS =
-  "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_";
-
 static int
 register_builtin_mechs (Gsasl * ctx)
 {
